docs/api/qiskit/0.37/qiskit.circuit.library.PolynomialPauliRotations.mdx
---
title: PolynomialPauliRotations
description: API reference for qiskit.circuit.library.PolynomialPauliRotations
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.PolynomialPauliRotations
---

# PolynomialPauliRotations

<Class id="qiskit.circuit.library.PolynomialPauliRotations" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/circuit/library/arithmetic/polynomial_pauli_rotations.py" signature="PolynomialPauliRotations(num_state_qubits=None, coeffs=None, basis='Y', name='poly')">
  Bases: [`qiskit.circuit.library.arithmetic.functional_pauli_rotations.FunctionalPauliRotations`](qiskit.circuit.library.FunctionalPauliRotations "qiskit.circuit.library.arithmetic.functional_pauli_rotations.FunctionalPauliRotations")

  A circuit implementing polynomial Pauli rotations.

  For a polynomial :math\`p(x)\`, a basis state $|i\rangle$ and a target qubit $|0\rangle$ this operator acts as:

$$
|i\rangle |0\rangle \mapsto \cos(p(i)) |i\rangle |0\rangle + \sin(p(i)) |i\rangle |1\rangle
$$

  Let n be the number of qubits representing the state, d the degree of p(x) and q\_i the qubits, where q\_0 is the least significant qubit. Then for

$$
x = \sum_{i=0}^{n-1} 2^i q_i,
$$

  we can write

$$
p(x) = \sum_{j=0}^{j=d} c_j x_j
$$

  where $c$ are the input coefficients, `coeffs`.

  Prepare an approximation to a state with amplitudes specified by a polynomial.

  **Parameters**

  *   **num\_state\_qubits** (`Optional`\[`int`]) – The number of qubits representing the state.
  *   **coeffs** (`Optional`\[`List`\[`float`]]) – The coefficients of the polynomial. `coeffs[i]` is the coefficient of the i-th power of x. Defaults to linear: \[0, 1].
  *   **basis** (`str`) – The type of Pauli rotation (‘X’, ‘Y’, ‘Z’).
  *   **name** (`str`) – The name of the circuit.

  ## Attributes

  ### ancillas

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotations.ancillas" name="ancillas">
    Returns a list of ancilla bits in the order that the registers were added.

    **Return type**

    `List`\[[`AncillaQubit`](qiskit.circuit.AncillaQubit "qiskit.circuit.quantumregister.AncillaQubit")]
  </Attribute>

  ### basis

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotations.basis" name="basis">
    The kind of Pauli rotation to be used.

    Set the basis to ‘X’, ‘Y’ or ‘Z’ for controlled-X, -Y, or -Z rotations respectively.

    **Return type**

    `str`

    **Returns**

    The kind of Pauli rotation used in controlled rotation.
  </Attribute>

  ### calibrations

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotations.calibrations" name="calibrations">
    Return calibration dictionary.

    **The custom pulse definition of a given gate is of the form**

    \{‘gate\_name’: \{(qubits, params): schedule}}

    **Return type**

    `dict`
  </Attribute>

  ### clbits

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotations.clbits" name="clbits">
    Returns a list of classical bits in the order that the registers were added.

    **Return type**

    `List`\[[`Clbit`](qiskit.circuit.Clbit "qiskit.circuit.classicalregister.Clbit")]
  </Attribute>

  ### coeffs

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotations.coeffs" name="coeffs">
    The multiplicative factor in the rotation angle of the controlled rotations.

    The rotation angles are `slope * 2^0`, `slope * 2^1`, … , `slope * 2^(n-1)` where `n` is the number of state qubits.

    **Return type**

    `List`\[`float`]

    **Returns**

    The rotation angle common in all controlled rotations.
  </Attribute>

  ### data

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotations.data" name="data" />

  ### degree

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotations.degree" name="degree">
    Return the degree of the polynomial, equals to the number of coefficients minus 1.

    **Return type**

    `int`

    **Returns**

    The degree of the polynomial. If the coefficients have not been set, return 0.
  </Attribute>

  ### extension\_lib

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotations.extension_lib" name="extension_lib" attributeValue="= 'include &#x22;qelib1.inc&#x22;;'" />

  ### global\_phase

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotations.global_phase" name="global_phase">
    Return the global phase of the circuit in radians.

    **Return type**

    `Union`\[[`ParameterExpression`](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression"), `float`]
  </Attribute>

  ### header

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotations.header" name="header" attributeValue="= 'OPENQASM 2.0;'" />

  ### instances

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotations.instances" name="instances" attributeValue="= 87" />

  ### metadata

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotations.metadata" name="metadata">
    The user provided metadata associated with the circuit

    The metadata for the circuit is a user provided `dict` of metadata for the circuit. It will not be used to influence the execution or operation of the circuit, but it is expected to be passed between all transforms of the circuit (ie transpilation) and that providers will associate any circuit metadata with the results it returns from execution of that circuit.

    **Return type**

    `dict`
  </Attribute>

  ### num\_ancilla\_qubits

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotations.num_ancilla_qubits" name="num_ancilla_qubits">
    Deprecated. Use num\_ancillas instead.
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotations.num_ancillas" name="num_ancillas">
    Return the number of ancilla qubits.

    **Return type**

    `int`
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotations.num_clbits" name="num_clbits">
    Return number of classical bits.

    **Return type**

    `int`
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotations.num_parameters" name="num_parameters">
    **Return type**

    `int`
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotations.num_qubits" name="num_qubits">
    Return number of qubits.

    **Return type**

    `int`
  </Attribute>

  ### num\_state\_qubits

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotations.num_state_qubits" name="num_state_qubits">
    The number of state qubits representing the state $|x\rangle$.

    **Return type**

    `int`

    **Returns**

    The number of state qubits.
  </Attribute>

  ### op\_start\_times

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotations.op_start_times" name="op_start_times">
    Return a list of operation start times.

    This attribute is enabled once one of scheduling analysis passes runs on the quantum circuit.

    **Return type**

    `List`\[`int`]

    **Returns**

    List of integers representing instruction start times. The index corresponds to the index of instruction in `QuantumCircuit.data`.

    **Raises**

    **AttributeError** – When circuit is not scheduled.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotations.parameters" name="parameters">
    **Return type**

    `ParameterView`
  </Attribute>

  ### prefix

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotations.prefix" name="prefix" attributeValue="= 'circuit'" />

  ### qregs

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotations.qregs" name="qregs">
    A list of the quantum registers associated with the circuit.
  </Attribute>

  ### qubits

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotations.qubits" name="qubits">
    Returns a list of quantum bits in the order that the registers were added.

    **Return type**

    `List`\[[`Qubit`](qiskit.circuit.Qubit "qiskit.circuit.quantumregister.Qubit")]
  </Attribute>
</Class>

